--- a/README.html
+++ b/README.html
@@ -365,25 +365,22 @@ summary {
 </div>
 
 
-<div id="grupo-de-estudos-do-grupo-de-economia-espacial-da-ufba-d" class="section level1">
-<h1>Grupo de estudos do grupo de economia espacial da UFBA =D</h1>
+<div id="grupo-de-estudos-de-aprendizagem-em-r-data-science-com-r" class="section level1">
+<h1>Grupo de estudos de aprendizagem em R/ Data Science com R</h1>
 <p>20-maio-2020</p>
-<p>O objetivo é estudar a linguagem R: métodos estatísticos/ econométricos/ machine learning…</p>
-<p><del>Vamos replicar os códigos e exercícios do livro <a href="http://faculty.marshall.usc.edu/gareth-james/ISL/">An Introduction to Statistical Learning: With Applications in R</a> (ISLR).</del></p>
-<div id="obs" class="section level2">
-<h2>OBS</h2>
-<p>Este repositório está no github: (<a href="https://github.com/enoches/gpee_aprendizagem-em-R" class="uri">https://github.com/enoches/gpee_aprendizagem-em-R</a>)</p>
-<p>Os avisos estão no Gloogle Classroom:<br />
-(<a href="https://classroom.google.com/u/0/c/ODc0OTI1MjUxOTZa" class="uri">https://classroom.google.com/u/0/c/ODc0OTI1MjUxOTZa</a>)</p>
+<div id="instruções" class="section level2">
+<h2>Instruções:</h2>
+<p>Este repositório está no github: <a href="https://github.com/enoches/gpee_aprendizagem-em-R">gpee-aprendizagem-em-R</a></p>
+<p>Os avisos estão no <a href="https://classroom.google.com/u/0/c/ODc0OTI1MjUxOTZa">Gloogle Classroom</a></p>
 </div>
 <div id="preparativos" class="section level2">
 <h2>Preparativos</h2>
 <div id="para-quem-for-baixar-o-programa-no-computador" class="section level3">
 <h3>Para quem for baixar o programa no computador:</h3>
 <ul>
-<li>Instalar o R 4.0 (<a href="https://cran.rstudio.com/bin/windows/base/" class="uri">https://cran.rstudio.com/bin/windows/base/</a>)<br />
+<li>Instalar ou atualizar o R mais recente (<a href="https://cran.rstudio.com/bin/windows/base/" class="uri">https://cran.rstudio.com/bin/windows/base/</a>)<br />
 </li>
-<li>Instalar o RStudio (preview da próxima versão, mas que está estável e dá pra usar tranquilamente) (<a href="https://rstudio.com/products/rstudio/download/preview/" class="uri">https://rstudio.com/products/rstudio/download/preview/</a>)<br />
+<li>Instalar ou atualizar o RStudio mais recente (<a href="https://rstudio.com/products/rstudio/download/" class="uri">https://rstudio.com/products/rstudio/download/</a>)<br />
 </li>
 <li>Instalar os programas do script <code>instalar-pacotes.R</code></li>
 </ul>
