Atualiza Readme e inclui scipt de join

--- a/README.html
+++ b/README.html
@@ -365,16 +365,15 @@ summary {
 </div>
 
 
-<div id="grupo-de-estudos-de-aprendizagem-em-r-data-science-com-r" class="section level1">
-<h1>Grupo de estudos de aprendizagem em R/ Data Science com R</h1>
-<p>20-maio-2020</p>
-<div id="instruções" class="section level2">
-<h2>Instruções:</h2>
+<div id="grupo-de-estudos-de-aprendizagem-em-r-data-science-com-r-ufba" class="section level1">
+<h1>Grupo de estudos de aprendizagem em R/ Data Science com R — UFBA</h1>
+<p>Enoch Filho et. al.<br />
++ 20-maio-2020<br />
++ (atualizado em 2020-08-02)</p>
+<div id="instruções-e-preparativos" class="section level2">
+<h2>Instruções e Preparativos</h2>
 <p>Este repositório está no github: <a href="https://github.com/enoches/gpee_aprendizagem-em-R">gpee-aprendizagem-em-R</a></p>
 <p>Os avisos estão no <a href="https://classroom.google.com/u/0/c/ODc0OTI1MjUxOTZa">Gloogle Classroom</a></p>
-</div>
-<div id="preparativos" class="section level2">
-<h2>Preparativos</h2>
 <div id="para-quem-for-baixar-o-programa-no-computador" class="section level3">
 <h3>Para quem for baixar o programa no computador:</h3>
 <ul>
@@ -384,6 +383,7 @@ summary {
 </li>
 <li>Instalar os programas do script <code>instalar-pacotes.R</code></li>
 </ul>
+<p>Obs: caso já tenha o R + RStudio instalados, sugiro atualizar tudo, inclusive os pacotes já instalados.</p>
 </div>
 <div id="para-quem-for-usar-diretamente-na-internet-sem-instalar" class="section level3">
 <h3>Para quem for usar diretamente na internet, sem instalar:</h3>
@@ -395,6 +395,29 @@ summary {
 <li>Clicar em “Save a permanent copy”</li>
 </ul>
 </div>
+</div>
+<div id="ordem-dos-scrips-utilizados" class="section level2">
+<h2>Ordem dos scrips utilizados</h2>
+<p>Para rever o ritmo dos encontros desde o início, pode seguir os scripts abaixo, na ordem:</p>
+<ol style="list-style-type: decimal">
+<li><code>instalar-pacotes.R</code><br />
+</li>
+<li><code>encontro-03.R</code><br />
+</li>
+<li><code>encontro-05.R</code><br />
+</li>
+<li><code>encontro-07.Rmd</code><br />
+</li>
+<li><code>lista_01_dataviz.R</code><br />
+</li>
+<li><code>lista_01_dataviz_gabarito.R</code><br />
+</li>
+<li><code>aula1_Fabio.r</code><br />
+</li>
+<li><code>exemploDeJoin_Fabio.r</code><br />
+</li>
+<li><code>montar-base-de-dados-2020-07-29.R</code></li>
+</ol>
 </div>
 </div>
 
